--- a/src/app/dashboard/components/course-registration/course-registration.component.scss
+++ b/src/app/dashboard/components/course-registration/course-registration.component.scss
@@ -13,77 +13,112 @@ main {
     flex-direction: column;
     align-items: center;
     padding-bottom: 24px;
-}
 
-section {
-    width: 100%;
-    display: grid;
-    grid-auto-columns: 1fr;
-    grid-template-rows: auto;
-    //gap: 24px;
-
-    .section-title {
-        margin: 16px 24px 8px 32px;
+    h2 {
+        margin: 2rem 1rem;
         color: var(--main-color2);
         font-weight: 500;
         font-size: 1.5rem;
     }
 
-    .course-container {
-        width: 80%;
-        margin: 8px 24px;
-        box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
-        border-radius: 4px;
-        background: rgba(131, 139, 139, 0.1);
-        display: grid;
-        grid-template-columns: 0.5fr 1fr;
-        grid-template-rows: auto;
-        gap: 16px;
+    section {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
-        .course-img {
-            width: 90%;
-            height: fit-content;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            cursor: pointer;
+        .course-container {
+            width: 85%;
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            column-gap: 1rem;
+            mat-card {
+                width: 90%;
+                padding: 0;
+                background: #fafafa;
 
-            img {
-                width: 80%;
-                padding: 8px;
+                img {
+                    width: 100%;
+                    height: 140px;
+                    margin: 0 0 1rem 0;
+                }
+
+                .mat-card-header {
+                    width: 100%;
+                    min-height: 56px;
+                    background: var(--main-color2);
+                    font-weight: 400;
+                    letter-spacing: 1px;
+                    color: white;
+                    margin: 0;
+                    padding: 0;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    border-top-left-radius: 5px;
+                    border-top-right-radius: 5px;
+
+                    .mat-card-title {
+                        margin: 0.5rem;
+                        font-size: 0.8rem;
+                    }
+
+                    .mat-card-subtitle {
+                        font-size: 0.7rem;
+                    }
+                }
+
+                .mat-card-content {
+                    padding: 0 1rem;
+                    margin: 0 0 0.5rem 0;
+
+                    p {
+                        font-size: 0.8rem;
+                        font-weight: 500;
+                        margin: 0 0.5rem;
+
+                        span {
+                            font-weight: normal;
+                        }
+                    }
+                }
+
+                .mat-card-actions {
+                    padding: 0 1rem;
+                    display: flex;
+                    justify-content: center;
+                    margin-bottom: 0.5rem;
+                }
             }
+
         }
 
-        .course-data {
-            display: flex;
-            flex-direction: column;
+    }
+}
 
-            .nombreCurso {
-                margin: 8px 0;
-                cursor: pointer;
-                color: var(--main-color2);
-                font-weight: 500;
-            }
-
-            p {
-                display: flex;
-                align-items: center;
-                color: var(--main-color2);
-                font-weight: 500;
-                font-size: 0.8rem;
-                margin: 0;
-
-                mat-icon {
-                    margin: 0 8px;
-                }
-
-                span {
-                    color: black;
-                    margin: 0 8px;
-                    font-size: 1rem;
-                }
+@media (max-width: 1319px) {
+    main {
+        section {
+            .course-container {
+                width: 80%;
+                grid-template-columns: 1fr 1fr;
+                row-gap: 1rem;
             }
         }
     }
 }
+
+@media (max-width: 666px) {
+    main {
+        section {
+            .course-container {
+                width: 60%;
+                grid-template-columns: 1fr;
+                row-gap: 1rem;
+            }
+        }
+    }
+}
+
+
 
