--- a/src/app/dashboard/components/course-registration/course-registration.component.html
+++ b/src/app/dashboard/components/course-registration/course-registration.component.html
@@ -1,5 +1,9 @@
 <main>
     <h2 class="section-title">Mis cursos</h2>
+    <section class="no-courses" *ngIf="noCourses">
+        <h3>No tienes suscripción a ningún curso</h3>
+        <p>conocelos <a (click)="goToCourseList()">acá</a></p>
+    </section>
     <section>
         <div class="course-container" >
             <mat-card class="example-card" *ngFor="let course of listcourse">
@@ -11,10 +15,10 @@
                     <p>Categoria: <span> {{course.categoria}} </span> </p>
                     <p>Profesor: <span> {{course.profesor}} </span> </p>
                     <p>Matricula: <span>{{course.tipoMatricula}}</span></p>
-                    <p>Ultimo ingreso: <span>13/11/2021</span></p>
+                    <p>Ultimo ingreso: <span class="ult-ingreso">{{course.ultimoIngreso}}</span></p>
                 </mat-card-content>
                 <mat-card-actions>
-                    <button mat-button (click)="goToCourseHome(course.id)">VER</button>
+                    <button mat-raised-button color="primary" (click)="goToCourseHome(course.id)">Ingresar</button>
                 </mat-card-actions>
             </mat-card>
         </div>
