agregado duracion y porcentaje en creacion de cursos

--- a/src/app/dashboard/components/certificates/adm-list-certificates/adm-list-certificates.component.html
+++ b/src/app/dashboard/components/certificates/adm-list-certificates/adm-list-certificates.component.html
@@ -100,13 +100,10 @@
             <button
             mat-stroked-button
             color="primary"
-            matTooltip="Editar curso"
+            matTooltip="Editar certificado"
             (click)="goToEdit(element)">
             <mat-icon style="color: darkgoldenrod;">edit</mat-icon>
             </button>
-            <!-- <button mat-stroked-button color="secondary" (click)="deleteUser(element)">
-            <mat-icon>delete</mat-icon>
-            </button> -->
         </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
