--- a/src/app/dashboard/components/cursos/add-student/add-student.component.html
+++ b/src/app/dashboard/components/cursos/add-student/add-student.component.html
@@ -1,7 +1,9 @@
 <mat-card class="matCardContent">
     <div class="contenedor">
-        <h1>Gestión de Estudiantes - <span>{{ course?.nombre }}</span></h1>
-
+        <div class="title">
+            <h1>{{ course?.nombre }}</h1>
+            <h2>Estudiantes Matriculados</h2>
+        </div>
         <div class="menuVariado">
             <div class="busquedaEstudiante">
                 <mat-form-field appearance="legacy" class="search">
