--- a/src/app/dashboard/components/cursos/add-student/add-student.component.scss
+++ b/src/app/dashboard/components/cursos/add-student/add-student.component.scss
@@ -3,19 +3,24 @@
     margin: 1.5rem auto;
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1);
     min-height: 76%;
+}
 
+.title {
+    margin: 2rem 0 1rem 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     h1 {
         text-align: center;
+        color: var(--main-color2);
+        font-weight: 500;
+        font-size: 1.4rem;
+        margin: 0;
     }
-}
 
-.contenedor h1 {
-    font-size: 1.3rem;
-}
-
-.contenedor h1 span {
-    color: var(--main-color2);
-    font-weight: 500;
+    h2 {
+        font-size: 1.2rem;
+    }
 }
 
 table {
