--- a/src/app/dashboard/components/cursos/add-student/matricular/matricular.component.html
+++ b/src/app/dashboard/components/cursos/add-student/matricular/matricular.component.html
@@ -14,9 +14,58 @@
             <mat-icon matSuffix>search</mat-icon>
             <mat-hint>Puede buscar en todos los campos</mat-hint>
         </mat-form-field>
+        <mat-checkbox
+                    class="example-margin"
+                    color="primary"
+                    [(ngModel)]="selected"
+                    (change)="allSelected($event)">
+                        Seleccionar todos los estudiantes
+        </mat-checkbox>
+        <button
+            mat-raised-button
+            style="margin-left: 1rem;"
+            [disabled]="MassiveRegister.length < 1"
+            [matMenuTriggerFor]="matriculaMasiva">
+                Matricula masiva
+        </button>
+        <mat-menu #matriculaMasiva="matMenu">
+            <button
+            (click)="registerSelectedStudents(0, 'nunca', 'indefinida')"
+            mat-menu-item>
+                <mat-icon>all_inclusive</mat-icon>
+                <span>Indefinido</span>
+            </button>
+            <button mat-menu-item
+            (click)="setRegisterTime()">
+                <mat-icon>date_range</mat-icon>
+                <span>Mes</span>
+            </button>
+        </mat-menu>
     </div>
 
     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+        <!-- seleccionar -->
+        <ng-container matColumnDef="sel">
+            <th
+            mat-header-cell
+            *matHeaderCellDef
+            mat-sort-header
+            id="sel">
+                Seleccionar
+            </th>
+            <td
+                mat-cell
+                *matCellDef="let element"
+                matTooltip="Seleccionar usuario para matricula masiva"
+                class="sel">
+                <mat-checkbox
+                    class="example-margin"
+                    color="primary"
+                    [(ngModel)]="element.seleccionado"
+                    (change)="individualStudentSelected($event)">
+                </mat-checkbox>
+            </td>
+        </ng-container>
         <!-- nombre del usuario -->
         <ng-container matColumnDef="nombre">
             <th
