--- a/src/app/dashboard/components/cursos/add-student/add-student.component.html
+++ b/src/app/dashboard/components/cursos/add-student/add-student.component.html
@@ -1,133 +1,170 @@
 <mat-card class="matCardContent">
-    <div class="contenedor">
-        <div class="title">
-            <h1>{{ course?.nombre }}</h1>
-            <h2>Estudiantes Matriculados</h2>
-        </div>
-        <div class="menuVariado">
-            <div class="busquedaEstudiante">
-                <mat-form-field appearance="legacy" class="search">
-                    <mat-label>Buscar</mat-label>
-                    <input
-                    (input)="applyFilter($event.target.value)"
-                    matInput placeholder="Buscar Usuario"> <!---->
-                    <mat-icon matSuffix>search</mat-icon>
-                    <mat-hint>Puede buscar en todos los campos</mat-hint>
-                </mat-form-field>
-            </div>
-            <div class="botonMatricular">
-                <button (click)="openDialog()">
-                    <div class="botonMatricular-item">
-                        <mat-icon>group_add</mat-icon>
-                        <div class="botonMatricular-texto">Agregar estudiante</div>
-                    </div>
-                </button>
-            </div>
-        </div>
-
-        <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-            <!-- nombre del usuario -->
-            <ng-container matColumnDef="nombre">
-                <th
-                mat-header-cell
-                *matHeaderCellDef
-                mat-sort-header
-                id="nombre">
-                    Nombre
-                </th>
-                <td
-                    mat-cell
-                    *matCellDef="let element"
-                    matTooltip="Usuario"
-                    class="name">
-                    {{ element.nombre }}
-                </td>
-            </ng-container>
-            <!-- correo -->
-            <ng-container matColumnDef="correo">
-                <th
-                mat-header-cell
-                *matHeaderCellDef
-                mat-sort-header
-                id="correo">
-                    Correo
-                </th>
-                <td
-                    mat-cell
-                    *matCellDef="let element"
-                    matTooltip="Correo electronico"
-                    class="correo">
-                    {{ element.correo }}
-                </td>
-            </ng-container>
-            <!-- perfil -->
-            <ng-container matColumnDef="perfil">
-                <th
-                mat-header-cell
-                *matHeaderCellDef
-                mat-sort-header
-                id="perfil">
-                    Perfil
-                </th>
-                <td
-                    mat-cell
-                    *matCellDef="let element"
-                    matTooltip="Perfil usuario"
-                    class="perfil">
-                    {{ element.perfil }}
-                </td>
-            </ng-container>
-
-            <!-- fecha registro -->
-            <ng-container matColumnDef="fecha">
-                <th
-                mat-header-cell
-                *matHeaderCellDef
-                mat-sort-header
-                id="fecha">
-                    Fecha Registro
-                </th>
-                <td
-                    mat-cell
-                    *matCellDef="let element"
-                    matTooltip="Fecha de registro en la plataforma"
-                    class="fecha">
-                    {{ element.fechaCreacion }}
-                </td>
-            </ng-container>
-
-            <!-- botones de acción -->
-            <ng-container matColumnDef="actions">
-                <th mat-header-cell *matHeaderCellDef id="acciones">Acciones</th>
-                <td mat-cell *matCellDef="let element" class="buttons">
-                    <button
-                    mat-mini-fab
-                    class="desmatricular"
-                    matTooltip="Desmatricular estudiante."
-                    color="warn"
-                    (click)="deleteStudent(element)"
-                    >
-                    <mat-icon>
-                        <span class="material-icons">person_off</span>
-                    </mat-icon>
-                </button>
-                </td>
-            </ng-container>
-
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-        </table>
-        <mat-paginator
-            [pageSizeOptions]="[10, 15, 20]"
-            showFirstLastButtons>
-        </mat-paginator>
-        <button
-            mat-stroked-button
-            color="primary"
-            (click)="goBack()"
-            style="background: var(--main-color2); color: white; margin-left: 32px;">
-            << Regresar
-        </button>
-
+  <div class="contenedor">
+    <div class="title">
+      <h1>{{ course?.nombre }}</h1>
+      <h2>Estudiantes Matriculados</h2>
     </div>
+    <div class="menuVariado">
+      <div class="busquedaEstudiante">
+        <mat-form-field appearance="legacy" class="search">
+          <mat-label>Buscar</mat-label>
+          <input
+            (input)="applyFilter($event.target.value)"
+            matInput
+            placeholder="Buscar Usuario"
+          />
+          <!---->
+          <mat-icon matSuffix>search</mat-icon>
+          <mat-hint>Puede buscar en todos los campos</mat-hint>
+        </mat-form-field>
+      </div>
+      <div class="unsubscribe">
+        <mat-checkbox
+          class="example-margin"
+          color="primary"
+          [(ngModel)]="activeMassive"
+          (change)="massiveUnsubscribe($event)"
+        >
+          Desmatricula Masiva
+        </mat-checkbox>
+        <mat-checkbox
+          class="example-margin"
+          color="primary"
+          [(ngModel)]="selected"
+          *ngIf="unsubscribe"
+          (change)="checkAllUsers($event)"
+        >
+          Seleccionar todos los estudiantes
+        </mat-checkbox>
+        <button
+          *ngIf="unsubscribe"
+          mat-raised-button
+          color="primary"
+          (click)="unsubscribeSelectedUsers()"
+          [disabled]="usersToUnsubscribe.length < 1"
+        >
+          Desmatricular
+        </button>
+      </div>
+      <div class="botonMatricular">
+        <button (click)="openDialog()">
+          <div class="botonMatricular-item">
+            <mat-icon>group_add</mat-icon>
+            <div class="botonMatricular-texto">Agregar estudiante</div>
+          </div>
+        </button>
+      </div>
+    </div>
+
+    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+      <!-- seleccionar -->
+      <ng-container matColumnDef="sel" *ngIf="unsubscribe">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header id="sel">
+          Seleccionar
+        </th>
+        <td
+          mat-cell
+          *matCellDef="let element"
+          matTooltip="Seleccionar usuario para matricula masiva"
+          class="sel"
+        >
+          <mat-checkbox
+            class="example-margin"
+            color="primary"
+            [(ngModel)]="element.seleccionado"
+            (change)="individualStudentSelected($event)"
+          >
+          </mat-checkbox>
+        </td>
+      </ng-container>
+      <!-- nombre del usuario -->
+      <ng-container matColumnDef="nombre">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header id="nombre">
+          Nombre
+        </th>
+        <td
+          mat-cell
+          *matCellDef="let element"
+          matTooltip="Usuario"
+          class="name"
+        >
+          {{ element.nombre }}
+        </td>
+      </ng-container>
+      <!-- correo -->
+      <ng-container matColumnDef="correo">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header id="correo">
+          Correo
+        </th>
+        <td
+          mat-cell
+          *matCellDef="let element"
+          matTooltip="Correo electronico"
+          class="correo"
+        >
+          {{ element.correo }}
+        </td>
+      </ng-container>
+      <!-- perfil -->
+      <ng-container matColumnDef="perfil">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header id="perfil">
+          Perfil
+        </th>
+        <td
+          mat-cell
+          *matCellDef="let element"
+          matTooltip="Perfil usuario"
+          class="perfil"
+        >
+          {{ element.perfil }}
+        </td>
+      </ng-container>
+
+      <!-- fecha registro -->
+      <ng-container matColumnDef="fecha">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header id="fecha">
+          Fecha Registro
+        </th>
+        <td
+          mat-cell
+          *matCellDef="let element"
+          matTooltip="Fecha de registro en la plataforma"
+          class="fecha"
+        >
+          {{ element.fechaCreacion }}
+        </td>
+      </ng-container>
+
+      <!-- botones de acción -->
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef id="acciones">Acciones</th>
+        <td mat-cell *matCellDef="let element" class="buttons">
+          <button
+            mat-mini-fab
+            class="desmatricular"
+            matTooltip="Desmatricular estudiante."
+            color="warn"
+            (click)="deleteStudent(element)"
+          >
+            <mat-icon>
+              <span class="material-icons">person_off</span>
+            </mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+    <mat-paginator [pageSizeOptions]="[10, 15, 20]" showFirstLastButtons>
+    </mat-paginator>
+    <button
+      mat-stroked-button
+      color="primary"
+      (click)="goBack()"
+      style="background: var(--main-color2); color: white; margin-left: 32px"
+    >
+      << Regresar
+    </button>
+  </div>
 </mat-card>
