--- a/src/app/dashboard/components/cursos/add-student/add-student.component.scss
+++ b/src/app/dashboard/components/cursos/add-student/add-student.component.scss
@@ -23,6 +23,18 @@
     }
 }
 
+.unsubscribe {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    button {
+        background: tomato;
+        color: white;
+        margin: 1rem 0;
+    }
+}
+
 table {
     width: 90%;
     margin: 0 auto;
