--- a/src/app/dashboard/components/navigation/navigation.component.html
+++ b/src/app/dashboard/components/navigation/navigation.component.html
@@ -138,10 +138,10 @@
           </mat-panel-description>
         </mat-expansion-panel-header>
         <mat-list>
-          <!-- <mat-list-item class="secondary-list">
+          <mat-list-item class="secondary-list">
             <a mat-list-item (click)="goToMyCareers()">Mis carreras</a>
             <mat-divider></mat-divider>
-          </mat-list-item> -->
+          </mat-list-item>
           <mat-list-item class="secondary-list">
             <a mat-list-item (click)="goToMyCourses()">Mis cursos</a>
             <mat-divider></mat-divider>
