--- a/src/app/dashboard/components/carreras/add-curso/add-curso.component.html
+++ b/src/app/dashboard/components/carreras/add-curso/add-curso.component.html
@@ -1,73 +1,103 @@
 <div class="container">
-    <h2>Agregar cursos</h2>
+  <h2>Agregar cursos</h2>
 
-    <div class="menuVariado">
-        <div class="busquedaEstudiante">
-            <mat-form-field appearance="legacy" class="search">
-                <mat-label>Buscar</mat-label>
-                <input matInput placeholder="Placeholder" (keyup)="applyFilter($event.target.value)" ><!---->
-                <mat-icon matSuffix>search</mat-icon>
-                <mat-hint>puede buscar por cualquier campo</mat-hint>
-            </mat-form-field>
-        </div>
-
-        <div class="botonAgregarCurso">
-            <button (click)="openDialog()">
-                <div class="botonAgregarCurso-item">
-                    <mat-icon>library_add</mat-icon>
-                    <div class="botonAgregarCurso-texto">Agregar curso</div>
-                </div>
-            </button>
-        </div>
-
+  <div class="menuVariado">
+    <div class="busquedaEstudiante">
+      <mat-form-field appearance="legacy" class="search">
+        <mat-label>Buscar</mat-label>
+        <input
+          matInput
+          placeholder="Placeholder"
+          (keyup)="applyFilter($event.target.value)"
+        /><!---->
+        <mat-icon matSuffix>search</mat-icon>
+        <mat-hint>puede buscar por cualquier campo</mat-hint>
+      </mat-form-field>
     </div>
 
-    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-
-        <!-- nombre de la carrera -->
-        <ng-container matColumnDef="nombre">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header id="nombre">Nombre</th>
-            <td
-            mat-cell
-            *matCellDef="let element"
-            matTooltip="Curso"
-            class="name">
-                {{ element.nombre }}
-            </td>
-        </ng-container>
-
-        <!-- botones de acción -->
-        <ng-container matColumnDef="estado">
-            <th mat-header-cell *matHeaderCellDef id="estado">Estado</th>
-            <td mat-cell *matCellDef="let element" class="buttons">
-
-                <button
-                mat-mini-fab
-                color="warn"
-                matTooltip="Quitar curso"
-                (click)="validarQuitarCurso(element.id, element.nombre)"
-                >
-                    <mat-icon>
-                        <span class="material-icons">clear</span>
-                    </mat-icon>
-                </button>
-
-            </td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-        </table>
-
-        <mat-paginator
-            [pageSizeOptions]="[10, 15, 20]"
-            showFirstLastButtons
-        ></mat-paginator>
-
-        <button
-        mat-stroked-button
-        color="primary"
-        routerLink="/dashboard/carreras"
-        style="background: var(--main-color2); color: white;">
-        << Gestión de Carreras
+    <div class="botonAgregarCurso">
+      <button (click)="openDialog()">
+        <div class="botonAgregarCurso-item">
+          <mat-icon>library_add</mat-icon>
+          <div class="botonAgregarCurso-texto">Agregar curso</div>
+        </div>
       </button>
+    </div>
+  </div>
+
+  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+    <!-- posición -->
+    <ng-container matColumnDef="pos">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header id="pos">
+        No.
+      </th>
+      <td mat-cell *matCellDef="let element">
+        <p style="color: var(--main-color2); font-weight: 400;">{{ element.posicion }}</p>
+      </td>
+    </ng-container>
+    <!-- nombre de la carrera -->
+    <ng-container matColumnDef="nombre">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header id="nombre">
+        Nombre
+      </th>
+      <td mat-cell *matCellDef="let element" matTooltip="Curso" class="name">
+        <p style="color: var(--main-color2); font-weight: 400;">{{ element.nombre }}</p>
+      </td>
+    </ng-container>
+
+    <!-- botones de acción -->
+    <ng-container matColumnDef="estado">
+      <th mat-header-cell *matHeaderCellDef id="estado">Estado</th>
+      <td mat-cell *matCellDef="let element" class="buttons">
+        <button
+          mat-mini-fab
+          color="primary"
+          matTooltip="Subir nivel"
+          (click)="levelUp(element)"
+          [disabled]="element.posicion === 1"
+        >
+          <mat-icon>
+            <span class="material-icons">arrow_upward</span>
+          </mat-icon>
+        </button>
+        <button
+          mat-mini-fab
+          color="primary"
+          matTooltip="Bajar nivel"
+          (click)="levelDown(element)"
+          [disabled]="element.posicion === dataSource.data.length"
+        >
+          <mat-icon>
+            <span class="material-icons">arrow_downward</span>
+          </mat-icon>
+        </button>
+        <button
+          mat-mini-fab
+          color="warn"
+          matTooltip="Quitar curso"
+          (click)="validarQuitarCurso(element.id, element.nombre)"
+        >
+          <mat-icon>
+            <span class="material-icons">clear</span>
+          </mat-icon>
+        </button>
+      </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+
+  <mat-paginator
+    [pageSizeOptions]="[10, 15, 20]"
+    showFirstLastButtons
+  ></mat-paginator>
+
+  <button
+    mat-stroked-button
+    color="primary"
+    routerLink="/dashboard/carreras"
+    style="background: var(--main-color2); color: white"
+  >
+    << Gestión de Carreras
+  </button>
 </div>
