--- a/src/app/dashboard/components/carreras/descripcion-carrera/descripcion-carrera.component.html
+++ b/src/app/dashboard/components/carreras/descripcion-carrera/descripcion-carrera.component.html
@@ -15,7 +15,7 @@
                         <mat-card-title>Descripción</mat-card-title>
                     </mat-card-header>
                     <mat-card-content>
-                        <div id="descripcion"></div>
+                        <div id="descripcion-carrera"></div>
                     </mat-card-content>
                     <mat-card-actions>
                         <button mat-button (click)="descriptionEdit('descripción')">Editar</button>
