--- a/src/app/dashboard/components/carreras/add-curso/add-curso.component.scss
+++ b/src/app/dashboard/components/carreras/add-curso/add-curso.component.scss
@@ -95,3 +95,11 @@ cursor: pointer;
     margin-left: 0.5rem;
 }
 
+.nombre-curso {
+    color: var(--main-color2); font-weight: 400;
+}
+
+.nombre-ejercicio {
+    color: #3f51b5; font-weight: 400;
+}
+
