--- a/src/app/dashboard/components/carreras/add-curso/add-curso.component.html
+++ b/src/app/dashboard/components/carreras/add-curso/add-curso.component.html
@@ -41,7 +41,7 @@
         Nombre
       </th>
       <td mat-cell *matCellDef="let element" matTooltip="Curso" class="name">
-        <p style="color: var(--main-color2); font-weight: 400;">{{ element.nombre }}</p>
+        <p [class]="element.tipo ? 'nombre-ejercicio' : 'nombre-curso'">{{ element.nombre }}</p>
       </td>
     </ng-container>
 
@@ -75,7 +75,7 @@
           mat-mini-fab
           color="warn"
           matTooltip="Quitar curso"
-          (click)="validarQuitarCurso(element.id, element.nombre)"
+          (click)="validarQuitarCurso(element)"
         >
           <mat-icon>
             <span class="material-icons">clear</span>
